--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,6 +1,10 @@
 # OpenAI Configuration
 OPENAI_API_KEY=your_openai_api_key_here
 
+# Google Custom Search Configuration (for web search)
+GOOGLE_API_KEY=your_google_api_key_here
+GOOGLE_CSE_ID=your_custom_search_engine_id_here
+
 # ClickHouse Cloud Configuration
 CLICKHOUSE_HOST=your_clickhouse_host.clickhouse.cloud
 CLICKHOUSE_PORT=8443
